Crash in [@ mozilla::net::CookiePersistentStorage::EnsureReadComplete]
Categories
(Core :: Networking: Cookies, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | wontfix |
| firefox78 | --- | wontfix |
| firefox79 | --- | fixed |
| firefox80 | --- | fixed |
People
(Reporter: philipp, Assigned: baku)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details |
This bug is for crash report bp-40fa868f-465e-44b1-840d-1ae2a0200702.
Top 10 frames of crashing thread:
0 xul.dll mozilla::net::CookiePersistentStorage::EnsureReadComplete netwerk/cookie/CookiePersistentStorage.cpp:1719
1 xul.dll mozilla::net::CookieService::SetCookiesFromIPC netwerk/cookie/CookieService.cpp:2251
2 xul.dll mozilla::net::CookieServiceParent::RecvSetCookies netwerk/cookie/CookieServiceParent.cpp:175
3 xul.dll mozilla::net::PCookieServiceParent::OnMessageReceived ipc/ipdl/PCookieServiceParent.cpp:274
4 xul.dll mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:6285
5 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2093
6 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1972
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:504
9 xul.dll nsThread::Shutdown xpcom/threads/nsThread.cpp:898
this crash signature is somewhat increasing during the firefox 79 cycle - from the crash report it's not immediately clear to me what the underlying reason might be though.
Comment 1•5 years ago
|
||
baku, is this related with your recent changes? Can you please take a look?
| Assignee | ||
Comment 2•5 years ago
|
||
It seems that here we are adding a cookie during the shutdown. It could be that the CookiePersistentStorage has already been released. We can ignore this cookie replacing this assertion to a if-stmt:
https://searchfox.org/mozilla-central/rev/91d82d7cbf05a71954dfa49d0e43824c7c973e62/netwerk/cookie/CookieService.cpp#2247
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 6•5 years ago
|
||
The patch landed in nightly and beta is affected.
:baku, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9161826 [details]
Bug 1650211 - Ignore cookie settings during the shutdown, r?mayhemer
Beta/Release Uplift Approval Request
- User impact if declined: A crash can occur in debug builds.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): During the shutdown, cookies cannot be set because the CookieService could have been nullified already.
This is a null check patch. Low risk. - String changes made/needed:
Comment 8•5 years ago
|
||
Comment on attachment 9161826 [details]
Bug 1650211 - Ignore cookie settings during the shutdown, r?mayhemer
Approved for 79.0b8.
Comment 9•5 years ago
|
||
| bugherder uplift | ||
Description
•