Bug 1650211 - Ignore cookie settings during the shutdown, r=mayhemer, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D82498